alignment fix for img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     position: relative;
 }
 
-img {
+p img {
     max-width: 100%;
     display: block;
     margin: auto;
